--- a/lilesh(40005201)/blogApp/views/editBlog.ejs
+++ b/lilesh(40005201)/blogApp/views/editBlog.ejs
@@ -29,7 +29,7 @@
                             <label for="content" class="col-sm-2  col-form-label">Content</label>
                             <div class="col-sm-10">
                                 <textarea name="content" class="form-control" id="content" placeholder="Content..."
-                                    style="height: 12rem;">"<%= data.content %>"</textarea>
+                                    style="height: 12rem;"><%= data.content %></textarea>
                             </div>
                         </div>
                         <div class="form-group row">
